[package]
name = "diff_xil_res"
version = "0.1.0"
authors = ["Emanuel Schmid <nevyn@sigil.faerun.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
exitcode = "1.1.2"
regex = "1"
